<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="now">Now</string>
    <string name="reminder_text">Reminder text</string>
    <string name="dropdown_menu_timeout">Advance reminder</string>
    <string name="dropdown_repeat_frequency">Repeat every</string>
    <string name="hours">hours</string>
    <string name="min">min</string>
    <string name="call_number">Call number: </string>
    <string name="call_numbers">Call numbers: </string>
    <string name="send_message">Send message: </string>
    <string name="send_messages">Send messages: </string>
    <string name="send_email">Send email: </string>
    <string name="send_emails">Send emails: </string>
    <string name="email_message_text_rem">E-mail message text</string>
    <string name="error_input_message">Error input message field</string>
    <string name="error_input_phone_number">Error input phone number field</string>
    <string name="error_input_email_address">Error input emails field</string>
    <string name="phones">Phones</string>
    <string name="sms">Sms</string>
    <string name="emails">Emails</string>
    <string name="close">Close</string>
    <string name="action">Action</string>
    <string name="actions">Actions</string>
    <string name="call_contact">Call contact: </string>
    <string name="call_contacts">Call contacts: </string>
    <string name="visible">Visible</string>
    <string name="invisible">Invisible</string>
    <string name="set_asidefor">Set aside for:</string>
    <string name="on_15min">on 15 min</string>
    <string name="on_30min">on 30 min</string>
    <string name="on_45min">on 45 min</string>
    <string name="on_1hour">on 1 hour</string>
    <string name="tomorrow">tomorrow</string>
    <string name="tomorrow_at9">tomorrow at 9:00 AM</string>
    <string name="tomorrow_at13">tomorrow at 1:00 PM</string>
    <string name="tomorrow_at18">tomorrow at 6:00 PM</string>
    <string name="tomorrow_at21">tomorrow at 9:00 PM</string>
    <string name="set_newdate">Set the new date</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="no_events">No events</string>
    <string name="font_family_body_1_material" translatable="false">sans-serif-condensed-light</string>
    <string name="app_name">MD Reminder</string>
    <string name="no_notes_yet">No notes yet</string>
    <string name="main_menu">Main menu</string>
    <string name="reminders">Reminders</string>
    <string name="reminder">Reminder</string>
    <string name="notes">Notes</string>
    <string name="note">Note</string>
    <string name="tasks">Task lists</string>
    <string name="task">Task list</string>
    <string name="contact">Contact</string>
    <string name="contacts">Contacts</string>
    <string name="secure_notes">Secure Notes</string>
    <string name="secure_note">Secure Note</string>
    <string name="widgets">Widgets</string>
    <string name="widget">Widget</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_number">Add Number</string>
    <string name="add_phone">Add Phone</string>
    <string name="telephone_number">Phone number</string>
    <string name="add_email">Add Email</string>
    <string name="email_text">E-mail text</string>
    <string name="email_address">E-mail address</string>
    <string name="add_sms">Add SMS</string>
    <string name="sms_message_text">SMS message text</string>
    <string name="add_image">Add image</string>
    <string name="add_file">Add file</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="today">Today</string>
    <string name="world_clock">World Clock</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="sound_options">Sound options</string>
    <string name="select_theme">Select theme</string>
    <string name="language">Language settings</string>
    <string name="time_format">Time format</string>
    <string name="date_format">Date format</string>
    <string name="notifications_sound">Notification sound</string>
    <string name="volume">Volume</string>
    <string name="duration">Notification duration</string>
    <string name="five_seconds">5 seconds</string>
    <string name="fifteen_seconds">15 seconds</string>
    <string name="thirty_seconds">30 seconds</string>
    <string name="complete_melody">Complete melody</string>
    <string name="repeating_common">Repeating notification</string>
    <string name="repeat_every">Repeat every</string>
    <string name="five_minutes">5 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="vibration">Vibration</string>
    <string name="popup">Pop-up screen</string>
    <string name="full_popup">Full</string>
    <string name="statusbar_popup">In status bar</string>
    <string name="popup_delay">Popup screen delay</string>
    <string name="two_seconds">2 seconds</string>
    <string name="four_seconds">4 seconds</string>
    <string name="disable_delay">Delay disabled</string>
    <string name="background_app">Background image</string>
    <string name="backup">Backup</string>
    <string name="all_entries">All entries</string>
    <string name="backup_save">Save</string>
    <string name="backup_save_folder">Save in folder</string>
    <string name="backup_save_gdrive">Save in Google Drive</string>
    <string name="delete_swipe">Swipe to delete notification</string>
    <string name="confirm_delete">Confirm deleting</string>
    <string name="trashbox">Trashbox</string>
    <string name="menu_position">Menu position</string>
    <string name="createplus_position">"Create" button position</string>
    <string name="left_position">Left</string>
    <string name="right_position">Right</string>
    <string name="autodelete_completed_reminders">Auto delete completed reminders</string>
    <string name="title_activity_settings">Delete notifications by swipe</string>
    <string name="restore_from">Restore from backup</string>
    <string name="reminder_addreminder">Reminder</string>
    <string name="text_reminder">Reminder text</string>
    <string name="time_reminder">00:00</string>
    <string name="date_reminder">Today</string>
    <string name="worldclock_reminder">World Clock</string>
    <string name="alarm_sound_reminder">Sound Options</string>
    <string name="pre">Pre remind</string>
    <string name="dm0_minutes_before" translatable="false">0 minutes before</string>
    <string name="dm15_minutes_before">15 minutes before</string>
    <string name="dm30_minutes_before">30 minutes before</string>
    <string name="dm45_minutes_before">45 minutes before</string>
    <string name="dm1_hour_before">1 hour before</string>
    <string name="repeat_remind_every">Repeat remind</string>
    <string name="dm0_minutes" translatable="false">none</string>
    <string name="dm15_minutes">15 minutes</string>
    <string name="dm_hour">hour</string>
    <string name="dm4_hour">4 hour</string>
    <string name="dm_every_day">Every day (at this time)</string>
    <string name="add_contact_reminder">Add Contact</string>
    <string name="add_phone_reminder">Add Phone</string>
    <string name="add_email_reminder">Add E-mail</string>
    <string name="add_sms_reminder">Add SMS</string>
    <string name="enter_phone_number_rem">Enter phone number</string>
    <string name="sms_text_rem">SMS-text</string>
    <string name="phone_number_sms_rem">SMS Contact</string>
    <string name="add_email_rem">Add E-mail</string>
    <string name="text_email_rem">Enter E-mail message</string>
    <string name="add_file_email_rem">Add file to E-mail</string>
    <string name="adress_mail">To:</string>
    <string name="cancel_addition_rem">Cancel</string>
    <string name="save_addition_rem">Save</string>
    <string name="note_text">Your note text</string>
    <string name="add_note">Add</string>
    <string name="contact_note">Contact</string>
    <string name="phone_number_note">Phone number</string>
    <string name="email_note">E-mail</string>
    <string name="addimage_note">Add image</string>
    <string name="addfile_note">Add file</string>
    <string name="enter_phone_note">Enter phone number</string>
    <string name="add_email_note">Add E-mail</string>
    <string name="cancel_addition_note">Cancel</string>
    <string name="save_addition_note">Save</string>
    <string name="listname">Tasklist name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="sms_text">SMS-text</string>
    <string name="phone_number_sms_task">Enter phone number</string>
    <string name="add_email_task">Add E-mail</string>
    <string name="text_email">Enter E-mail message</string>
    <string name="add_file_email_task">Add file to E-mail</string>
    <string name="cancel_addition_tasklist">Cancel</string>
    <string name="save_addition_tasklist">Save</string>
    <string name="addimage_task">Add image</string>
    <string name="addfile_task">Add file</string>
    <string name="safenote_text">Your note text</string>
    <string name="safenote_add">Add</string>
    <string name="safenote_contact">Contact</string>
    <string name="safenote_phone_number">Phone number</string>
    <string name="safenote_email">E-mail</string>
    <string name="addimage_safenote">Add image</string>
    <string name="addfile_safenote">Add file</string>
    <string name="enter_phone_safenote">Enter phone number</string>
    <string name="add_email_safenote">Add E-mail</string>
    <string name="add_pin_code">PIN Code</string>
    <string name="theme_widget">Theme</string>
    <string name="dark_widget">Dark</string>
    <string name="light_widget">Light</string>
    <string name="use_current_theme">Use current app theme</string>
    <string name="opacity_widget">Opacity</string>
    <string name="set_widget">Set</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="reminders_list">Reminder`s list</string>
    <string name="add_remind" translatable="false">add remind</string>
    <string name="go_to_previous_month" translatable="false">go to previous month</string>
    <string name="go_to_next_month" translatable="false">go to next month</string>
    <string name="go_to_widget_settings" translatable="false">go to widget settings</string>
    <string name="contains_phone_number" translatable="false">contains phone number</string>
    <string name="contains_sms_message" translatable="false">contains sms message</string>
    <string name="contains_email_message" translatable="false">contains email message</string>
    <string name="contains_attached_file" translatable="false">contains attached file</string>
    <string name="line_image" translatable="false">line image</string>
    <string name="application_details_settings">Application Details Settings</string>
    <string name="notification_receive_settings">&lt;h4&gt;Receive notification settings&lt;/h4&gt;</string>
    <string name="disable_batery_optimization">To receive notifications even when the app is inactive, you\'ll need to:     &lt;br&gt;&lt;br&gt;     &lt;b&gt;1&lt;/b&gt;. Press the &lt;b&gt;\'Application Details Settings\'&lt;/b&gt; button. &lt;br&gt;&lt;br&gt; &lt;b&gt;2&lt;/b&gt;. Navigate to the &lt;b&gt;\'Battery Usage\'&lt;/b&gt; (or &lt;b&gt;\'Battery\'&lt;/b&gt;) section within the app settings. &lt;br&gt;&lt;br&gt; &lt;b&gt;3&lt;/b&gt;. Select the &lt;b&gt;\'Unrestricted\'&lt;/b&gt; option (or &lt;b&gt;\'Allow background activity\'&lt;/b&gt;).</string>
</resources>