<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menu_remind"
        android:icon="@drawable/ic_baseline_edit_note_24"
        android:title="@string/reminders" />
    <item
        android:id="@+id/menu_note"
        android:icon="@drawable/menu_note"

        android:title="@string/notes" />
    <item
        android:id="@+id/menu_task"
        android:icon="@drawable/menu_tasklist"

        android:title="@string/tasks" />
    <item
        android:id="@+id/secure_note"
        android:icon="@drawable/menu_pin_note"

        android:title="@string/secure_notes" />
    <item
        android:id="@+id/widget"
        android:icon="@drawable/menu_widget_settings"
        android:iconTint="#C6C6C6"
        android:iconTintMode="src_in"
        android:title="@string/widgets" />
</menu>