<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:cacheColorHint="#00000000"
    android:orientation="vertical"
    android:theme="@style/Theme.SartReminder.AppWidgetContainer">

    <LinearLayout
        android:id="@+id/llHeaderBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/widget_block_top_bottom_margin"
            android:paddingEnd="@dimen/widget_block_top_bottom_margin">

            <ImageView
                android:id="@+id/btn_prev"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:contentDescription="@string/go_to_previous_month"
                android:scaleType="centerInside"
                android:src="@drawable/ic_twotone_keyboard_arrow_left_24px" />

            <TextView
                android:id="@+id/month_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:text="Березень"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btn_next"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:contentDescription="@string/go_to_next_month"
                android:scaleType="centerInside"
                android:src="@drawable/ic_twotone_keyboard_arrow_right_24px" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/btn_add_task"
                android:layout_width="44dp"
                android:layout_height="36dp"
                android:layout_gravity="right"
                android:contentDescription="@string/add_remind"
                android:foregroundGravity="right"
                android:paddingTop="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/plus" />

            <ImageView
                android:id="@+id/btn_settings"
                android:layout_width="45dp"
                android:layout_height="38dp"
                android:layout_gravity="right|end"
                android:contentDescription="@string/go_to_widget_settings"
                android:foregroundGravity="right"
                android:paddingTop="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/menu_settings" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sunday"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/widget_calendar_red_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monday"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/color_primary_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuesday"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/color_primary_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wednesday"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/color_primary_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thursday"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/color_primary_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/friday"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/color_primary_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saturday"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/color_primary_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSundayEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sunday"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/widget_calendar_red_color"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <ImageView
            android:id="@+id/line_image_view_two"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/vcontacts_margin_top"
            android:background="@color/color_line"
            android:contentDescription="@string/line_image"
            android:src="@drawable/line_drawable" />
    </LinearLayout>


    <GridView
        android:id="@+id/calendar_grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-5dp"
        android:horizontalSpacing="-1dp"
        android:numColumns="7"
        android:stretchMode="columnWidth"
        android:verticalSpacing="1dp" />


</LinearLayout>
