<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

    <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/comfortaa_regular"
            android:lineHeight="20sp"
            android:text="@string/notification_receive_settings"
            android:textAlignment="center"
            android:textColor="@color/color_hint"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/comfortaa_regular"
            android:lineHeight="20sp"
            android:text="@string/disable_batery_optimization"
            android:textColor="@color/color_hint"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/positive_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"
            app:layout_constraintVertical_bias="1.0" />

    <Button
            android:id="@+id/positive_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/comfortaa_regular"
            android:lineHeight="18sp"
            android:padding="10dp"
            android:text="@string/application_details_settings"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/negative_button"
            app:layout_constraintEnd_toEndOf="@+id/negative_button"
            app:layout_constraintStart_toStartOf="@+id/negative_button" />

    <Button
            android:id="@+id/negative_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_regular"
            android:padding="10dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>