<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reminder_list_widget"
    style="@style/Widget.SartReminder.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="-16dp"
    android:layout_marginBottom="-10dp"
    android:background="@color/background_none"
    android:cacheColorHint="#00000000"
    android:orientation="vertical"
    android:paddingStart="0dp"
    android:paddingTop="0dp"
    android:paddingEnd="0dp"
    android:paddingBottom="10dp"
    android:theme="@style/Theme.SartReminder.AppWidgetContainer">


    <LinearLayout
        android:id="@+id/llHeaderBg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/image_background_mask"
        android:orientation="vertical"
        android:paddingStart="10dp"

        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="@dimen/widget_block_top_bottom_margin"
            android:paddingEnd="@dimen/widget_block_top_bottom_margin">

            <TextView
                android:id="@+id/tvWidgetTitleDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="П'ятниця 13 вересня"
                android:textColor="@color/color_primary_text"
                android:textSize="@dimen/widget_date_title" />

            <ImageView
                android:id="@+id/ivWidgetPlus"
                android:layout_width="@dimen/widget_action_icon"
                android:layout_height="@dimen/widget_action_icon"
                android:layout_weight="1"
                android:contentDescription="@string/add_remind"
                app:srcCompat="@drawable/plus" />

            <ImageView
                android:id="@+id/ivWidgetSetting"
                android:layout_width="@dimen/widget_action_icon"
                android:layout_height="@dimen/widget_action_icon"
                android:layout_weight="1"
                android:contentDescription="@string/go_to_widget_settings"
                app:srcCompat="@drawable/menu_settings" />

        </LinearLayout>

        <ImageView
            android:id="@+id/line_image_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/widget_block_top_bottom_margin"
            android:background="@color/deep_black"
            android:contentDescription="@string/line_image"
            android:src="@drawable/line_drawable" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llWidgetBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView

            android:id="@+id/lvWidget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/reminders_list"
            android:divider="@null"
            android:dividerHeight="4dp"
            android:scrollbars="none" />

    </LinearLayout>
</LinearLayout>
