<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/widgetListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_none"
    android:cacheColorHint="#00000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/widget_block_top_bottom_margin"
            android:layout_marginBottom="@dimen/widget_block_top_bottom_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvWidgetDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="П'ятниця 13 вересня"
                android:textColor="@color/color_primary_text"
                android:textSize="@dimen/widget_block_date"
                android:textStyle="bold"
                app:lineHeight="@dimen/widget_block_line_height" />

            <TextView
                android:id="@+id/tvWidgetTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="16:45"
                android:textAlignment="center"
                android:textColor="@color/color_primary_text"
                android:textSize="@dimen/widget_block_time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvWidgetMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/widget_block_top_bottom_margin"
                android:layout_weight="200"

                android:paddingStart="8dp"
                android:text="Забрати речі з хімчистки "
                android:textColor="@color/color_primary_text"
                android:textSize="@dimen/widget_block_message"
                app:lineHeight="@dimen/widget_block_line_height" />

            <ImageView
                android:id="@+id/ivWidgetPhoneIcon"
                android:layout_width="@dimen/widget_block_attach_icon"
                android:layout_height="@dimen/widget_block_attach_icon"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/widget_block_top_bottom_margin"
                android:layout_weight="1"
                android:contentDescription="@string/contains_phone_number"
                app:srcCompat="@drawable/phone" />

            <ImageView
                android:id="@+id/ivWidgetSmsIcon"
                android:layout_width="@dimen/widget_block_attach_icon"
                android:layout_height="@dimen/widget_block_attach_icon"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/widget_block_top_bottom_margin"
                android:layout_weight="1"
                android:contentDescription="@string/contains_sms_message"
                app:srcCompat="@drawable/sms" />

            <ImageView
                    android:id="@+id/ivWidgetMailIcon"
                    android:layout_width="@dimen/widget_block_attach_icon"
                    android:layout_height="@dimen/widget_block_attach_icon"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/widget_block_top_bottom_margin"
                    android:layout_weight="1"
                    android:contentDescription="@string/contains_email_message"
                    app:srcCompat="@drawable/mail" />

            <ImageView
                android:id="@+id/ivWidgetAttachFileIcon"
                android:layout_width="@dimen/widget_block_attach_icon"
                android:layout_height="@dimen/widget_block_attach_icon"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/widget_block_top_bottom_margin"
                android:layout_weight="1"
                android:contentDescription="@string/contains_attached_file"
                app:srcCompat="@drawable/attachfilew" />
        </LinearLayout>

        <ImageView
                android:id="@+id/line_image_view_two"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/widget_block_top_bottom_margin"
                android:background="@color/pureBlack"
                android:contentDescription="@string/line_image"
                android:src="@drawable/line_drawable" />
    </LinearLayout>
</LinearLayout>